--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,35 @@
+/*
+Project Name: Logan's website
+Author: Logan Glantz
+*/
 
+
+/******************************************
+/* BASE STYLES
+/*******************************************/
 
 body {
-  padding-top: 5rem;
+  margin: 0px 0px;
   background: #D2B48C;
 }
-.starter-template {
-  padding: 3rem 1.5rem;
-  text-align: center;
+
+/******************************************
+/* LAYOUT
+/*******************************************/
+
+.hero-area {
+  background-image: url("../imgs/dog.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
 }
+
+.vertical-center {
+  display: flex;
+  align-items: center;
+}
+
+
+/******************************************
+/* ADDITIONAL STYLES
+/*******************************************/
